; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_brush.c_get_hatch_data.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/gdiplus/extr_brush.c_get_hatch_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HatchBrushes = common dso_local global i8** null, align 8
@Ok = common dso_local global i32 0, align 4
@NotImplemented = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_hatch_data(i64 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8**, align 8
  store i64 %0, i64* %4, align 8
  store i8** %1, i8*** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i8**, i8*** @HatchBrushes, align 8
  %8 = call i64 @ARRAY_SIZE(i8** %7)
  %9 = icmp ult i64 %6, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load i8**, i8*** @HatchBrushes, align 8
  %12 = load i64, i64* %4, align 8
  %13 = getelementptr inbounds i8*, i8** %11, i64 %12
  %14 = load i8*, i8** %13, align 8
  %15 = load i8**, i8*** %5, align 8
  store i8* %14, i8** %15, align 8
  %16 = load i32, i32* @Ok, align 4
  store i32 %16, i32* %3, align 4
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @NotImplemented, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %10
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i64 @ARRAY_SIZE(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
